# Auto-pen

./: .gitignore  README.md  pyproject.toml
config/: default.yaml
src/autopen/: __init__.py  cli.py  logging_config.py
src/autopen/agent/: __init__.py  loop.py  prompts.py
src/autopen/api/: __init__.py  main.py
src/autopen/llm/: __init__.py  anthropic.py  base.py  factory.py  ollama.py  openai.py
src/autopen/reporting/: __init__.py  cve_enricher.py  cvss.py  generator.py
src/autopen/security/: __init__.py  args.py  confirm.py  scope.py
src/autopen/state/: __init__.py  manager.py  models.py
src/autopen/tools/: __init__.py  base.py  cve_lookup.py  dig.py  duckduckgo.py  ffuf.py  gobuster.py  hydra.py  metasploit.py  nikto.py  nmap.py  nuclei.py  record_finding.py  registry.py  sqlmap.py  whatweb.py  whois.py
tests/integration/: test_api.py
tests/unit/: test_audit_fixes.py  test_fixes_round2.py  test_fixes_round3.py  test_fixes_round4.py  test_fixes_round5.py  test_fixes_round6.py  test_llm_base.py  test_record_finding.py  test_report_generator.py  test_reporting.py  test_resume_context.py  test_scope.py  test_state.py  test_tools.py
web/: next.config.ts  package-lock.json  package.json
web/src/app/: globals.css  layout.tsx
web/src/app/sessions/: page.tsx
web/src/app/tools/: page.tsx
web/src/components/confirmation/: ApprovalDialog.tsx
web/src/components/findings/: FindingsTable.tsx
web/src/components/report/: DownloadButtons.tsx  ReportViewer.tsx
web/src/hooks/: useSessionWebSocket.ts  useSessions.ts
web/src/lib/: api.ts  types.ts  ws.ts
(+4 files in other folders)
