[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "auto-pen"
version = "0.1.0"
description = "LLM-powered automated penetration testing tool"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    # LLM backends
    "ollama>=0.3.0",
    "openai>=1.0.0",
    "anthropic>=0.30.0",
    # CLI / terminal UI
    "typer[all]>=0.12.0",
    "rich>=13.0.0",
    "prompt-toolkit>=3.0.0",
    # API server
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    # Database
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    # Data validation
    "pydantic>=2.7.0",
    "pydantic-settings>=2.0.0",
    # Networking / utils
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.scripts]
auto-pen = "autopen.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/autopen"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
